[package]
name = "fluvio-collab-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
fluvio = "0.19"
tower-http = { version = "0.4", features = ["cors"] }
uuid = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures-util = "0.3"
